--- a/src/main/resources/templates/metric.html
+++ b/src/main/resources/templates/metric.html
@@ -25,7 +25,7 @@
 
                     // Set chart options
                     var options = {title : 'Website Metric',
-                        hAxis : {title : 'Time',titleTextStyle : {color : '#333'}},
+                        hAxis : {title : 'Time', direction:'-1', titleTextStyle : {color : '#333'}},
                         vAxis : {minValue : 0}};
 
                     // Instantiate and draw our chart, passing in some options.
